<resources>
    <string name="app_name">live_module</string>
    <string name="desc">desc</string>
    <!--引导页相关-->
    <string name="startapp">开始体验</string>
    <string name="logo_text">需要修改</string>

    <!--主页-->
    <string name="tab_live">首页</string>
    <string name="tab_collect">收藏</string>
    <string name="tab_mine">我的</string>

    <!--网络相关-->
    <string name="please_check_your_network">您的网络不给力~刷新试试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="no_data">暂无数据</string>

    <!--main_navigation-->
    <string name="modify_phone">修改手机号</string>
    <string name="modify_password">修改密码</string>
    <string name="set_name">设置昵称</string>
    <string name="login_out">退出登录</string>
    <string name="touch_again">再按一次退出</string>
    <string name="qr_code">欢迎关注医视联公众号</string>

    <!--直播首页-->
    <string name="tab_hd_operation">高清手术</string>
    <string name="tab_academic_conference">学术会议</string>
    <string name="tab_special_lectures">专题讲座</string>
    <string name="tab_difficult_cases">疑难病例</string>
    <string name="tab_teaching_rounds">教学查房</string>
    <string name="tab_education_training">教育培训</string>
    <string name="live_class">直播课堂</string>
    <string name="live">直播</string>
    <string name="recording">录播</string>
    <string name="time_unit">分钟</string>
    <string name="my_collects">我的收藏</string>
    <string name="interactive">直播互动</string>
    <string name="course_content">课程内容</string>
    <string name="expert_introduction">专家简介</string>
    <string name="schedule">日程安排</string>
    <string name="conference_introduction">大会介绍</string>
    <string name="question">提问</string>
    <string name="send">发送</string>
    <string name="hint_send">提问请选中左侧复选框</string>
    <string name="tip_question">提问内容不能为空</string>
    <string name="video_recommendation">视频推荐</string>

    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="ok">确定</string>
    <string name="submit_code">提交验证码</string>
    <string name="next">下一步</string>
    <string name="fast_login">手机快速登录</string>
    <string name="account_login">账号登录</string>
    <string name="warm_notice">温馨提示</string>
    <string name="exit_app">退出后需要重新登录，是否确定退出？</string>
    <string name="cancle">取消</string>
    <string name="confirm_logout">确定退出</string>
    <string name="offine_notice">提醒</string>
    <string name="login_retry">您的账号在别处登录,您已被我下线,如果不是本人操作,请尽快修改密码!</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="phone_style">手机号码格式不正确</string>
    <string name="hint_password">请输入密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="user_agreement">登录即代表您已同意</string>
    <string name="agreement">《视联医生服务协议》</string>
    <string name="tourist_mode">随便看看</string>
    <string name="set_password">设置密码</string>

    <string name="error_tip">手机号或密码错误,请重新输入</string>


    <!--设置昵称-->
    <string name="hint_nickname">请输入昵称</string>
    <string name="nickname_style">昵称最大长度12个字符，包含数字、字母和汉字。</string>

    <!--修改密码-->
    <string name="hint_current_password">请输入当前密码</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_set_password">请设置密码</string>
    <string name="hint_confirm_password">请确认密码</string>
    <string name="hint_new_password_again">请再次输入新密码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="password_style">密码长度6-16位，须包含数字、字母、符号至少2种以上元素。</string>
    <string name="double_password_error">两次输入的密码不一致</string>
    <string name="password_right_style">密码格式不正确</string>
    <string name="password_same">新密码与旧密码相同</string>

    <!--修改手机号-->
    <string name="hint_new_phone">请输入新手机号</string>
    <string name="hint_sms_code">请输入验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="later_sms_code">%1$d后再次获取</string>


    <string name="find_password">找回密码</string>
    <string name="person_info">个人信息</string>

    <!--分享相关-->
    <string name="share_to">分享到</string>
    <string name="share_qq">QQ</string>
    <string name="share_weixin">微信</string>
    <string name="share_moment">朋友圈</string>
    <string name="evenote_title">正在直播</string>
    <string name="share_content">视联网高清现场直播中！</string>
    <string name="share_link">http://www.baidu.com</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancle">取消分享</string>

    <!--相册选择-->
    <string name="add_pic">选择上传方式</string>
    <string name="photo_gallery">相册</string>
    <string name="take_photo">相机</string>

    <!--收藏-->
    <string name="record">录播</string>
    <string name="liveing">直播中</string>
    <string name="no_started">未开始</string>
    <string name="live_over">已结束</string>

    <string name="liveings">正在直播</string>
    <string name="no_starteds">即将开播</string>
    <string name="live_overs">已结束</string>

    <!--我的-->
    <string name="msg_center">消息中心</string>
    <string name="my_attention">我的关注</string>
    <string name="about_us">关于我们</string>
    <string name="edit">编辑</string>
    <string name="setting">设置</string>
    <string name="all_live">他的全部直播</string>

    <!--关于我们-->
    <string name="company_name">视联动力信息技术股份有限公司</string>
    <string name="service_agreement">服务协议</string>
    <string name="service_number">客服电话</string>
    <string name="service_phone">4008526578</string>
    <string name="version">当前版本号: </string>

    <!--个人信息-->
    <string name="user_head">头像</string>
    <string name="nick_name">昵称</string>
    <string name="set_nickname">请设置昵称</string>
    <string name="department">科室</string>
    <string name="select_department">请选择所在科室</string>
    <string name="phone">手机号</string>
    <string name="set_phone">请设置手机号</string>
    <string name="hospital">医院</string>
    <string name="job_title">职称</string>
    <string name="tip_hospital">请设置医院</string>
    <string name="tip_job_title">请设置职称</string>
    <string name="hint_hospital">请输入医院名称</string>
    <string name="hint_job_title">请输入职称</string>
    <string name="set_hospital">设置医院</string>
    <string name="set_job_title">设置职称</string>

    <string name="hint_search">请输入专家名称或课程名称</string>
    <string name="search">搜索</string>
    <string name="im_login_tip">登录账户可以开始聊天</string>
    <string name="no_groupid">进入聊天室失败!</string>
    <string name="im_login_success">进入聊天室成功,可以开始聊天了!</string>

    <!--设置-->
    <string name="version_name">当前版本</string>
    <string name="clear_cache">清除缓存</string>
    <string name="wifi">仅WiFi观看</string>
    <string name="update_notice">当前有新版本,是否立即更新?</string>
    <string name="update_exit">退出</string>
    <string name="update_now">立即更新</string>

    <item name="tag_first" type="id" />
    <item name="tag_second" type="id" />


    <string name="password_tip">6-12位字符需含大小写字母</string>
</resources>
